Fixes to alignment in columns and header

--- a/public/styles/input.scss
+++ b/public/styles/input.scss
@@ -47,8 +47,8 @@ table {
 	border-spacing: 0;
 }
 .container{
-  width: auto;
-	margin:70px 0 0 0;
+	width: auto;
+	margin:70px 0 0 0;	
 }
 header{
 	position: fixed;
@@ -56,8 +56,7 @@ header{
 	top: 0px;
 	background-color:$off-white;
 	z-index: 10000;
-	padding-left: 74px;
-  	padding-top: 10px;
+	padding: 10px 0 0 5%;
 }
 h2{
 	font-size: 2em;
@@ -69,8 +68,8 @@ h2{
 	max-width: 700px;
 }
 p{
-  line-height: 1.5em;
-  font-size:16px;
+	line-height: 1.5em;
+	font-size:16px;
 }
 a{
 	text-decoration: none;
@@ -78,19 +77,13 @@ a{
 .section{
 	padding: 0 5% 0 5%;
 }
-// #logo{
-// 	height: 33px;
-//   padding-left: 70px;
-// }
+
 #nav-bar{
-	// height: 33px;
-	// display: flex;
-	// margin-left: auto;
+
 	#logo{
 		height: 1.5em;
 	}
 	ul{
-		// display:flex;
 		align-items:flex-end;
 		
 	}
@@ -152,6 +145,9 @@ h3{
 }
 .navbar-toggler{
 	border: 1px solid $light-blue;
+}
+.align-items-baseline {
+	padding-left: 0;
 }
 #testemonials{
 	display: flex;
