--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -54,8 +54,7 @@ header {
   top: 0px;
   background-color: #eaeaea;
   z-index: 10000;
-  padding-left: 74px;
-  padding-top: 10px;
+  padding: 10px 0 0 5%;
 }
 
 h2 {
@@ -147,6 +146,10 @@ h3 {
 
 .navbar-toggler {
   border: 1px solid #255a6f;
+}
+
+.align-items-baseline {
+  padding-left: 0;
 }
 
 #testemonials {
